@startuml
class User {
  -id: String
  -name: String
  -email: String
  -password: String
  +login(): boolean
  +logout(): void
}

class Student {
  -studentId: String
  -major: String
  -graduationYear: int
  +searchJobs(): List<Job>
  +applyForJob(): boolean
}

class Employer {
  -companyName: String
  -companyId: String
  +postJob(): boolean
  +viewApplications(): List<Application>
}

class Admin {
  -adminLevel: String
  +manageUsers(): void
  +generateReports(): void
}

class Job {
  -jobId: String
  -title: String
  -description: String
  -company: String
  -location: String
  -payRate: double
  -category: String
  -requirements: List<String>
  +getJobDetails(): String
  +updateJob(): boolean
}

class Application {
  -applicationId: String
  -studentId: String
  -jobId: String
  -status: String
  -applicationDate: Date
  +submitApplication(): boolean
  +getApplicationStatus(): String
  +updateStatus(): void
}

' Design Pattern 1: Singleton - DatabaseConnection
class DatabaseConnection {
  -static instance: DatabaseConnection
  -connection: Connection
  -DatabaseConnection()
  +getInstance(): DatabaseConnection
  +getConnection(): Connection
  +closeConnection(): void
}

note left of DatabaseConnection
  **Singleton Pattern**
  Ensures only one database
  instance exists system-wide
end note

' Design Pattern 2: Factory Method - UserFactory
class UserFactory {
  +createUser(type: String, details: Map<String, String>): User
}

note right of UserFactory
  **Factory Method Pattern**
  Creates different user types
  based on input parameters
end note

' Design Pattern 3: Strategy - JobSearch
interface JobSearchStrategy {
  +search(jobs: List<Job>, criteria: String): List<Job>
}

class SearchByCategory {
  +search(jobs: List<Job>, category: String): List<Job>
}

class SearchByPayRate {
  +search(jobs: List<Job>, minPayRate: String): List<Job>
}

note right of JobSearchStrategy
  **Strategy Pattern**
  Different search algorithms
  can be applied dynamically
end note

' Design Pattern 4: Facade - JobApplicationFacade
class JobApplicationFacade {
  -dbConnection: DatabaseConnection
  -userFactory: UserFactory
  +applyForJob(studentId: String, jobId: String): boolean
  +processApplication(app: Application): boolean
  +getApplicationStatus(appId: String): String
}

note right of JobApplicationFacade
  **Facade Pattern**
  Simplifies complex job
  application process
end note

' Relationships
User <|-- Student
User <|-- Employer
User <|-- Admin

JobSearchStrategy <|.. SearchByCategory
JobSearchStrategy <|.. SearchByPayRate

Student --> Job
Student --> Application
Employer --> Job
Employer --> Application
Job --> Application

JobApplicationFacade --> DatabaseConnection
JobApplicationFacade --> Application
JobApplicationFacade --> UserFactory

DatabaseConnection --> Application
DatabaseConnection --> Job
DatabaseConnection --> User
@enduml